--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -1998,23 +1998,25 @@
       }, "Filters set");
       return await postNext('Generate predicted measurement', i);
     }
+    async function getFilterPoints(fltIdx, useAntiHF=false) {
+      const fltPoints = [];
+      const octave = Math.pow(2, 1 / 96);
+      const fltResponse = await fetchSafe('frequency-response?smoothing=1%2F48&ppo=96', fltIdx);
+      const fltArray = response2array(fltResponse, 10, 24000);
+      let freq = 10;
+      for (let k = 0; k < fltArray.length; k++) {
+        const splValue = fltArray[k] + (useAntiHF ? antiHFRolloff[k] : 0);
+        fltPoints.push([freq, splValue]);
+        freq *= octave;
+      }
+      return fltPoints.map(point => `{${point[0]}, ${point[1]}}`);
+    }
     async function updateAdy() {
       for (let i = 1; i <= nSpeakers; i++) {
         if (customCrossover[i] === "L") {continue;};
         if (customCrossover[i] > 90) {customCrossover[i] /= 10;} 
       }
       const jsonData = JSON.parse(adyContents);
-      if (bassMode === "Directional" && !useAudyFiltering) {
-        let ii = 54;
-        for (let i = nChannels - 1; i < jsonData.detectedChannels.length; i++) {
-          const swChannel = jsonData.detectedChannels[i];
-          swChannel.enChannelType = ii;
-          ii++;
-          if (swChannel.customCrossover) { delete swChannel.customCrossover };
-          if (swChannel.customSpeakerType) { delete swChannel.customSpeakerType };
-          if (swChannel.customTargetCurvePoints && (i != (nChannels - 1))) { delete swChannel.customTargetCurvePoints };
-        }
-      }
       jsonData.dynamicVolume = false;
       jsonData.lfc = false;
       jsonData.dynamicEq = (targetCurveName === "");
@@ -2043,8 +2045,6 @@
           }
         });
       }
-      // prepare variables in case useAudyFiltering is enabled
-      const octave = Math.pow(2, 1 / 96);
       // inject filters/TC into ady
       for (let i = 1; i <= nSpeakers; i++) {
         let customTargetCurvePoints;
@@ -2057,16 +2057,8 @@
           }
         }
         else {
-          const fltPoints = [];
           const fltIdx = cmdIdFilterIndices[commandId[i]];
-          const fltResponse = await fetchSafe('frequency-response?smoothing=1%2F48&ppo=96', fltIdx);
-          const fltArray = response2array(fltResponse, 10, 24000);
-          let freq = 10;
-          for (let k = 0; k < fltArray.length; k++) {
-            fltPoints.push([freq, fltArray[k] + antiHFRolloff[k]]);
-            freq *= octave;
-          }
-          customTargetCurvePoints = fltPoints.map(point => `{${point[0]}, ${point[1]}}`);
+          customTargetCurvePoints = await getFilterPoints(fltIdx, true);
         }
         const thisChannel = jsonData.detectedChannels.find(channel => channel.commandId === commandId[i]);
         thisChannel.customTargetCurvePoints = customTargetCurvePoints;
@@ -2084,16 +2076,8 @@
           customTargetCurvePointsSub = audyFilterPoints.map(point => `{${point[0]}, ${point[1]}}`);
         }
         else {
-          const fltPointsSub = [];
           const fltIdxSub = cmdIdFilterIndices[commandId[nChannels]];
-          const fltResponseSub = await fetchSafe('frequency-response?smoothing=1%2F48&ppo=96', fltIdxSub);
-          const fltArraySub = response2array(fltResponseSub, 10, 24000);
-          let freq = 10;
-          for (let k = 0; k < fltArraySub.length; k++) {
-            fltPointsSub.push([freq, fltArraySub[k]]);
-            freq *= octave;
-          }
-          customTargetCurvePointsSub = fltPointsSub.map(point => `{${point[0]}, ${point[1]}}`);
+          customTargetCurvePointsSub = await getFilterPoints(fltIdxSub);
         }
         const subChannel = jsonData.detectedChannels[nChannels - 1];
         subChannel.customTargetCurvePoints = customTargetCurvePointsSub;
@@ -2114,6 +2098,15 @@
           }
         }
         if (bassMode === "Directional" && !useAudyFiltering) {
+          let ii = 54;
+          for (let i = nChannels - 1; i < jsonData.detectedChannels.length; i++) {
+            const swChannel = jsonData.detectedChannels[i];
+            swChannel.enChannelType = ii;
+            ii++;
+            if (swChannel.customCrossover) { delete swChannel.customCrossover };
+            if (swChannel.customSpeakerType) { delete swChannel.customSpeakerType };
+            if (swChannel.customTargetCurvePoints && (i != (nChannels - 1))) { delete swChannel.customTargetCurvePoints };
+          }
           jsonData.subwooferLayout = "N/A";
           sOs === 343 ? jsonData.subwooferMode = "Standard" : jsonData.subwooferMode = "N/A";
         }
